# openposeWithKinect

./: LowerVessel.xyz  UpperVessel.xyz
examples/tutorial_api_cpp/: 01_body_from_image_default.cpp
examples/user_code/vessel/: CMakeLists.txt
examples/user_code/vessel/src/: NonRigidreg.cpp  Registration.cpp  Registration.h  clipArm.h  detectBody.h  main.cpp  workutils.h
examples/user_code/vessel/src/geodesic/: geodesic_algorithm_exact.h
examples/user_code/vessel/src/tools/: Types.h  io_mesh.h  nodeSampler.cpp  tools.h
template1/: 1.vtk  LowerResult.txt  Lowerres.stl  Lowersource.txt  Lowertarget.txt  UpperResult.txt  Upperres.stl  Uppersource.txt  Uppertarget.txt  clipXYZ.txt  distance.txt  euler.txt  featureXYZ.txt  result.txt  segedArm.txt  segedArm1.ply  segedArm2.ply  sourcefeature.txt  trajectory.txt  transformedTargetLower.ply  transformedTargetUpper.ply  vessel5.txt  x.txt  y.txt  z.txt
